[workspace]
members = [
  "crates/pru_core",
  "crates/pru_cli",
  "crates/pru_py",
  "crates/pru_bench",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["PRU-DB Team"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
blake3 = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memmap2 = "0.9"
byteorder = "1"
crc32fast = "1"
zstd = { version = "0.13", default-features = false }
roaring = { version = "0.10", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
criterion = "0.5"
hex = "0.4"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros"] }
libc = "0.2"
xorfilter = { package = "xorfilter-rs", version = "0.5.1" }
rand = "0.9.2"
