[workspace]
members = [
  "crates/pru_core",
  "crates/pru_cli",
  "crates/pru_py",
  "crates/pru_bench",
  "crates/pru_gui",
  "crates/pru_media_schema",
  "crates/pru_detectors_api",
  "crates/pru_truth_engine",
  "crates/pru_ingest",
  "crates/pru_storage",
  "apps/truth_sentinel",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["PRU-DB Team"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
blake3 = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memmap2 = "0.9"
byteorder = "1"
crc32fast = "1"
zstd = { version = "0.13", default-features = false }
roaring = { version = "0.10", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
criterion = "0.5"
hex = "0.4"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros"] }
libc = "0.2"
xorfilter = { package = "xorfilter-rs", version = "0.5.1" }
rand = "0.9.2"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "ico"] }
kamadak-exif = "0.6"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
