[package]
name = "pru_cli"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
pru_core = { path = "../pru_core" }
rand = { workspace = true }
